--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         font-size: 2em;
       }
     </style>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
     <h1>Clockster - time clock</h1>
@@ -17,11 +18,6 @@
     </div>
     <button id="toggleBtn">Start/Stop</button>
     <button id="resetBtn">Reset</button>
-    <br>
-    <br>
-    <br>
-    <div id="timePost">
-    </div>
 
     <script>require('./app.js')</script>
   </body>
