--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <button id="toggleBtn">Start/Stop</button>
     <button id="resetBtn">Reset</button>
 
+    <div id="timeSheet"></div>
+
     <script>require('./app.js')</script>
   </body>
 </html>
