--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Clockster</title>
+    <link rel="stylesheet" href="/build/css/style.css">
   </head>
   <body>
+    <div id="main"></div>
 
-    <script src="http://localhost:8080/webpack-dev-server.js"></script>
-    <script src="http://localhost:8080/built/bundle.js"></script>
+    <script src="/build/main.js"></script>
   </body>
 </html>
